# spherical_fmm

./: CMakeLists.txt  README.md
applications/brill_wave/: .gitignore
applications/brill_wave/c/: Makefile
applications/brill_wave/c/include/: conformal_solver.hpp
applications/brill_wave/c/src/: conformal_solver.cpp  main.c  main.cpp
applications/brill_wave/notebooks/: demo_conformal_solver.ipynb
applications/brill_wave/src/: __init__.py  conformal_solver.py
include/: atomic.c  complex.hpp  complex_impl.hpp  erfc_double.hpp  expansion.hpp  fixed32.hpp  fixed64.hpp  fmm_cuda.hpp  intel.hpp  p2p.hpp  periodic.hpp  simd_fixed32.hpp  simd_fixed64.hpp  timer.hpp  timing.cpp  vec3.hpp  vec_macros.hpp  vec_simd.hpp  vec_size.hpp
src/: brill_wave_test.cpp  brille.cpp  codegen.cpp  cuda_detect.cu  test.cpp  test.cu  tree_code.cpp
